# LacisProxyGateway2

./: .gitignore  CLAUDE.md
backend/: Cargo.toml
backend/config/: default.toml
backend/src/: geoip.rs  lacis_id.rs  main.rs  node_order.rs  user_object_ingester.rs
backend/src/api/: admin_guard.rs  auth_middleware.rs  mod.rs
backend/src/api/handlers/: agent.rs  aranea.rs  audit.rs  auth.rs  dashboard.rs  ddns.rs  diagnostics.rs  external.rs  lacis_id.rs  mod.rs  nginx.rs  omada.rs  openwrt.rs  routes.rs  security.rs  settings.rs  tools.rs  topology.rs  wireguard.rs
backend/src/aranea/: client.rs  mod.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/db/mongo/: access_log.rs  external.rs  ip_history.rs  mod.rs  omada.rs  openwrt.rs  operation_logs.rs  security_events.rs  topology.rs  user_object_detail.rs
backend/src/db/mysql/: audit.rs  blocked_ips.rs  ddns.rs  device_state.rs  mod.rs  routes.rs  settings.rs
backend/src/ddns/: mod.rs  updater.rs
backend/src/ddns/providers/: cloudflare.rs  dyndns.rs  mod.rs  noip.rs
backend/src/error/: mod.rs
backend/src/health/: checker.rs  mod.rs
backend/src/models/: mod.rs
backend/src/notify/: discord.rs  mod.rs
backend/src/omada/: client.rs  manager.rs  mod.rs  sync.rs
backend/src/openwrt/: client.rs  manager.rs  mod.rs  sync.rs
backend/src/proxy/: handler.rs  mod.rs  router.rs  ws_handler.rs
backend/src/restart/: mod.rs
backend/src/wireguard/: config.rs  keygen.rs  mod.rs
docs/: celestial_globe_redesign.md  omada_openapi_manual.md
frontend/: next.config.mjs  package-lock.json  (+3 more)
(+65 files in other folders)
