[package]
name = "lacis-proxy-gateway"
version = "0.1.0"
edition = "2021"
authors = ["warusaku"]
description = "Reverse Proxy Gateway with DDNS integration"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# HTTP client for proxying
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.24"
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono", "uuid"] }
mongodb = "2.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# URL parsing
url = "2"

# Error handling
thiserror = "1"
anyhow = "1"

# Async utilities
futures = "0.3"
async-trait = "0.1"
regex = "1.12.3"

# GeoIP lookup
maxminddb = "0.27"

[dev-dependencies]
tokio-test = "0.4"

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = "thin"
